2000-07-26  Martin Baulig  <baulig@suse.de>

	* gnome-less.c: Reflect latest GtkTextBuffer changes.

2000-07-25  Martin Baulig  <baulig@suse.de>

	* gnome-icon-list.c (gil_place_icon): Correctly halign the
	icons at the middle of their labels.

2000-07-25  Martin Baulig  <baulig@suse.de>

	Added new GnomeSelector widget. We'll subclass this for
	files, directories, icons, pixmaps and so on.

	* gnome-icon-selector.[ch]: New files.
	* gnome-file-selector.[ch]: New files.
	* gnome-selectorP.h: New file.

	* gnome-selector.[ch]: New files.
	* selector-demo.c: New demo.

2000-07-25  Martin Baulig  <baulig@suse.de>

	* gnome-entry.[ch]: "privatized" it, added necessary accessor
	functions for the now hidden members and added GtkArg stuff.

	* gnome-procbar.[ch]: Marked this as deprecated and moved
	it into the compat library.

2000-07-19  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-mdi*.[ch]: "privatized" all structures. code cleanup.
	added necessary accessor functions for the now hidden members.
	fixed all the code to (hopefully) work with the above changes.
	* gnome-pouch.[ch]: likewise.
	* gnome-roo.[ch]: likewise.
	* gnome-pouchP.h: new file. contains private parts ;) of the
	GnomePouch and GnomeRoo widgets.
	* Makefile.am: added gnome-pouchP.h to libgnomeui_2_la_SOURCES.
	* mdi-demo.c: fixed to use the accessor functions instead of
	directly accessing the members.

Tue Jul 18 00:46:14 2000  George Lebl <jirka@5z.com>

	* gnome-gconf.c:  don't ref/sink, and use gconf_client_get_default
	  instead of _new

Mon Jul 17 23:49:58 2000  George Lebl <jirka@5z.com>

	* gnome-less.[ch]:  Port to the new text widget.  deprecate the font
	  functions and replace them with new ones which are 1) saner 2)
	  compatible with the new text widget.  Add a way to set width to
	  a specified amount of columns.  Derive the widget from HBox rather
	  then VBox to kill one level of wigetry.  Add append versions of all
	  the show functions.  Make the text widget pointers public.
